--- a/.github/workflows/dyhs.yml
+++ b/.github/workflows/dyhs.yml
@@ -1,39 +1,32 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 抖音火山版
+name: jrtt 今日头条极速版
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 * * * *'
+    - cron: '5,35,50 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: started
+    types: jrtt
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/niubi-66/B.git ~/js
-      - name: Use Node.js ${{ matrix.node-version }}
+          git clone https://github.com/niubi-66/B.git ~/scripts
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 10.x
       - name: npm install
         run: |
-          cd ~/js
-          git checkout master
+          cd ~/scripts
           npm install
       - name: '运行 【抖音火山版】'
         run: |
