--- a/.github/workflows/zqjs.yml
+++ b/.github/workflows/zqjs.yml
@@ -1,65 +1,39 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
 
-name: youth 中青看点极速版
+name: 中青
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 0-23 * * *'
+     - cron: '*/20 0-23/1 * * *'
   watch:
-    types: started
-  repository_dispatch:
-    types: youth
+     types: started
+    
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/niubi-66/B.git ~/scripts
+      - uses: actions/checkout@v1
       - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
       - name: npm install
         run: |
-          cd ~/scripts
           npm install
-      - name: '运行 【中青看点极速版】'
+      - name: '运行 【中青】'
         run: |
-          cd ~/scripts
           node Task/zqjs.js
         env:
-          YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
-          YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
-          YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
-          YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
-          
-          #微信酱
+          BBB_bububaoTOKEN: ${{ secrets.BBB_bububaoTOKEN }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          #BARK推送
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          #tg推送
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          #钉钉推送
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          #企业微信推送
-          QYWX_KEY: ${{ secrets.QYWX_KEY }}
-          #iGot推送
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          #酷推(Cool Push)推送
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
-                    #pushplus推送
-          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
-          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
-          #万能推
-             
-          ALLIN_KEY: ${{ secrets.ALLIN_KEY }} 
-          NOTICE_ID: ${{ secrets.NOTICE_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
