--- a/.github/workflows/zqjs.yml
+++ b/.github/workflows/zqjs.yml
@@ -32,7 +32,7 @@ jobs:
       - name: '运行 【中青看点】'
         if: env.YOUTH_HEADER
         run: |
-          node Task/zqjs.js
+          node Task/youth.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
