--- a/.github/workflows/zqjs.yml
+++ b/.github/workflows/zqjs.yml
@@ -1,46 +1,32 @@
-
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: 中青看点
+name: 中青看点（1-4）
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/28 * * * *'
+    - cron: '*/30 * * * *'
   watch:
-    types: started
-
+    types: [started]
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
-        YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
-        YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
-        YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+
+      - name: 'Set up Python'
+        uses: actions/setup-python@v1
         with:
-          node-version: 12.x
-      - name: npm install
-        if: env.YOUTH_HEADER
-        run: |
-          npm install
-      - name: '运行 【中青看点】'
-        if: env.YOUTH_HEADER
-        run: |
-          node Task/zqjs.js
-        env:
-          YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          python-version: 3.7
+
+      - name: 'Install requests'
+        run: pip install requests
+
+      - name: "安装依赖包"
+        run: pip install -r requirements.txt
+
+      - name: 'run 中青看点'
+        run: python3 Task/youth.py
+        env:            
+            TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}  #非必须 tg机器人token
+            TG_USER_ID: ${{ secrets.TG_USER_ID }}  #非必须 tg机器人userId
