--- a/.github/workflows/you.yml
+++ b/.github/workflows/you.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 #多帐号YOUTH_HEADER 用#号隔开，其它的用&隔开
-name: yout
+name: youth(中青看点)
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/15 * * * *'
+     - cron: '0/15 * * * *'
   watch:
     types: youth
 
@@ -15,9 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        YOUTHHEADER_ZQ: ${{ secrets. YOUTHHEADER_ZQ }}
-        READ_ZQ: ${{ secrets. READ_ZQ }}
-        READTIME_ZQ: ${{ secrets. READTIME_ZQ }}
+        YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
+        YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
+        YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
+        YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js 12.x
@@ -25,11 +26,11 @@ jobs:
         with:
           node-version: 12.x
       - name: npm install
-        if: env. YOUTHHEADER_ZQ
+        if: env.YOUTH_HEADER
         run: |
           npm install
       - name: '运行 【中青看点】'
-        if: env. YOUTHHEADER_ZQ
+        if: env.YOUTH_HEADER
         run: |
           node Task/youth.js
         env:
