--- a/.github/workflows/you.yml
+++ b/.github/workflows/you.yml
@@ -1,44 +1,30 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-#多帐号YOUTH_HEADER 用#号隔开，其它的用&隔开
-name: youth(中青看点)
+# This is a basic workflow to help you get started with Actions
+
+name: yout
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0/15 * * * *'
-  watch:
-    types: youth
-
+    - cron: '*/30 0-23 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
-        YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
-        YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
-        YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 12.x
+      - name: Checkout
+        run: |
+          git clone https://github.com/niubi-66/B.git ~/js
+      - name: Use Node.js 14.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 14.x
       - name: npm install
-        if: env.YOUTH_HEADER
         run: |
+          cd ~/js
           npm install
-      - name: '运行 【中青看点】'
-        if: env.YOUTH_HEADER
+          npm install cron
+          npm install request
+      - name: '运行 【yout】'
         run: |
+          cd ~/js   
           node Task/youth.js
-        env:
-          YOUTH_NOTIFY_CONTROL: ${{ secrets.YOUTH_NOTIFY_CONTROL }}
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
