--- a/.github/workflows/zqjs.yml
+++ b/.github/workflows/zqjs.yml
@@ -3,7 +3,7 @@ name: 中青看点（1-4）
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 0-23/1 * * *'
+    - cron: '*/10 * * * *'
   watch:
     types: [started]
 jobs:
