--- a/.github/workflows/dyhs2.yml
+++ b/.github/workflows/dyhs2.yml
@@ -6,7 +6,7 @@ name: 抖音火山版
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '*/10 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
