--- a/.github/workflows/fqxs.yml
+++ b/.github/workflows/fqxs.yml
@@ -6,7 +6,7 @@ name: fqxs
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 0-23/1 * * *'
+     - cron: '*/30 0-23 * * *'
   watch:
     types: started
 jobs:
