--- a/.github/workflows/hotsoon.yml
+++ b/.github/workflows/hotsoon.yml
@@ -6,7 +6,7 @@ name: 火山小视频极速版
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/3 * * * *'
+    - cron: '*/3 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
