--- a/.github/workflows/baidu_speed.yml
+++ b/.github/workflows/baidu_speed.yml
@@ -2,7 +2,7 @@ name: baidu_speed@Sunert3
 on:
     workflow_dispatch:
     schedule:
-      - cron: "*/20 0-23 * * *"
+      - cron: "0/20 0-23 * * *"
     watch:
       types: [started]
 jobs:
