--- a/.github/workflows/dsj.yml
+++ b/.github/workflows/dsj.yml
@@ -3,7 +3,7 @@ name: 电视家
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/15 4,7,12,20,23 * * *'
+     - cron: '0/15 4,7,12,20,23 * * *'
   watch:
     types: started
 jobs:
