--- a/.github/workflows/fqkk.yml
+++ b/.github/workflows/fqkk.yml
@@ -8,7 +8,7 @@ name: 番茄看看
 on:
   workflow_dispatch:
   schedule:
-     - cron: '3 3-15/1 * * *'
+     - cron: '3 3-15 * * *'
   watch:
      types: started
     
