--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -6,7 +6,7 @@ name: 笑谱
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/10 0-23 * * *'
+     - cron: '0/10 0-23 * * *'
   watch:
     types: started
 jobs:
