--- a/.github/workflows/jkd.yml
+++ b/.github/workflows/jkd.yml
@@ -2,7 +2,7 @@ name: 聚看点
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/20 */2 * * *'
+     - cron: '0/20 0-23/2 * * *'
   watch:
     types: started
 jobs:
