--- a/.github/workflows/jrtt.yml
+++ b/.github/workflows/jrtt.yml
@@ -6,7 +6,7 @@ name: jrtt 今日头条极速版
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5,35,50 0-23 * * *'
+    - cron: '0/10 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
