--- a/.github/workflows/kkd.yml
+++ b/.github/workflows/kkd.yml
@@ -5,7 +5,7 @@ name: 快看点
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 0-23 * * *'
+    - cron: '0/20 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
