--- a/.github/workflows/lgyy.yml
+++ b/.github/workflows/lgyy.yml
@@ -5,7 +5,7 @@ name: lgyy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/20 0-23 * * *'
+    - cron: '0/20 0-23 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
