--- a/.github/workflows/qczjspeed.yml
+++ b/.github/workflows/qczjspeed.yml
@@ -6,7 +6,7 @@ name: qczjspeed 汽车之家极速版
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 0-23 * * *'
+    - cron: '0/15 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
