--- a/.github/workflows/runstep.yml
+++ b/.github/workflows/runstep.yml
@@ -3,7 +3,7 @@ name: 走路赚
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/15 0-23 * * *'
+    - cron: '0/15 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
