--- a/.github/workflows/xim.yml
+++ b/.github/workflows/xim.yml
@@ -5,7 +5,7 @@ name: xim
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 2 * * *'
+    - cron: '30 0-23 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
