--- a/.github/workflows/zqwn.yml
+++ b/.github/workflows/zqwn.yml
@@ -5,7 +5,7 @@ name: 最强牛
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 0-23 * * *'
+    - cron: '0/20 0-23 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
