--- a/.github/workflows/wcyd.yml
+++ b/.github/workflows/wcyd.yml
@@ -1,30 +1,38 @@
-# This is a basic workflow to help you get started with Actions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# push:
+#   branches: 
+#   - master 
 
-name: wcyd
+name: 番茄看看
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0-59 9-22 * * *'
+     - cron: '0-59 0-23 * * *'
+  watch:
+     types: started
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-      - name: Checkout
-        run: |
-          git clone https://github.com/niubi-66/B.git ~/js
-      - name: Use Node.js 14.x
+      - uses: actions/checkout@v1
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 10.x
       - name: npm install
         run: |
-          cd ~/js
           npm install
-          npm install cron
-          npm install request
       - name: '运行 【wcyd】'
         run: |
-          cd ~/js   
           node Task/wcyd.js
+        env:
+          BBB_bububaoTOKEN: ${{ secrets.BBB_bububaoTOKEN }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TXNEWS_NOTIFY_CONTROL: ${{ secrets.TXNEWS_NOTIFY_CONTROL }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
