--- a/.github/workflows/yqnb.yml
+++ b/.github/workflows/yqnb.yml
@@ -9,7 +9,7 @@ name: yqnb
 on:
   workflow_dispatch:
   schedule:
-     - cron: '7 7 0-23 * * *'
+     - cron: '7 0-23 * * *'
   watch:
      types: started
     
