--- a/.github/workflows/kpjs.yml
+++ b/.github/workflows/kpjs.yml
@@ -8,7 +8,7 @@ name: kpjs
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0 0/30 * * * *'
+     - cron: '*/30 * * * *'
   watch:
      types: started
     
