--- a/.github/workflows/zqfx.yml
+++ b/.github/workflows/zqfx.yml
@@ -5,7 +5,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: '6 0,7,8,10,13 * * *'
+    - cron: '6 0-23/1 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest    
