--- a/.github/workflows/sqxs.yml
+++ b/.github/workflows/sqxs.yml
@@ -4,7 +4,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: '0 1,7 * * *'
+    - cron: '7 0-23/2 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest       
