--- a/.github/workflows/qczjspeed.yml
+++ b/.github/workflows/qczjspeed.yml
@@ -1,66 +1,48 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: qczjspeed 汽车之家极速版
+name: 汽车之家极速版
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0/15 0-23 * * *'
+     - cron: '*/30 * * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: qczjspeed
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        QCZJ_GetUserInfoHEADER: ${{ secrets.QCZJ_GetUserInfoHEADER }}
+        QCZJ_taskBODY: ${{ secrets.QCZJ_taskBODY }}		
+        QCZJ_activityBODY: ${{ secrets.QCZJ_activityBODY }}	
+        QCZJ_addCoinBODY: ${{ secrets.QCZJ_addCoinBODY }}
+        QCZJ_addCoin2BODY: ${{ secrets.QCZJ_addCoin2BODY }}
+        QCZJ_CASH: ${{ secrets.QCZJ_CASH }}
+        QCZJ_CASHTIME: ${{ secrets.QCZJ_CASHTIME }}
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/niubi-66/B.git ~/scripts
-      - name: Use Node.js 10.x
+          git clone https://github.com/T-playground/ziye.git ~/JavaScript
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 12.x
       - name: npm install
+        if: env.QCZJ_GetUserInfoHEADER
         run: |
-          cd ~/scripts
+          cd ~/JavaScript
+          git checkout ZIYE
           npm install
       - name: '运行 【汽车之家极速版】'
+        if: env.QCZJ_GetUserInfoHEADER
         run: |
-          cd ~/scripts
+          cd ~/JavaScript
           node Task/qczjspeed.js
         env:
-          QCZJ_GetUserInfoHEADER: ${{ secrets.QCZJ_GetUserInfoHEADER }}
-          QCZJ_taskBODY: ${{ secrets.QCZJ_taskBODY }}
-          QCZJ_activityBODY: ${{ secrets.QCZJ_activityBODY }}
-          QCZJ_addCoinBODY: ${{ secrets.QCZJ_addCoinBODY }}
-          QCZJ_addCoin2BODY: ${{ secrets.QCZJ_addCoin2BODY }}
           
-          #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          #BARK推送
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          #tg推送
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          #钉钉推送
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          #企业微信推送
-          QYWX_KEY: ${{ secrets.QYWX_KEY }}
-          #iGot推送
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          #酷推(Cool Push)推送
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
-                    #pushplus推送
-          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
-          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
-          #万能推
-             
-          ALLIN_KEY: ${{ secrets.ALLIN_KEY }} 
-          NOTICE_ID: ${{ secrets.NOTICE_ID }}
