--- a/.github/workflows/TXStock.yml
+++ b/.github/workflows/TXStock.yml
@@ -3,7 +3,7 @@ name: 腾讯自选股
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 7,10,12,15 * * *'
+    - cron: '25 */3 * * *'
   
 jobs:
   build:
