--- a/.github/workflows/TXStockCow.yml
+++ b/.github/workflows/TXStockCow.yml
@@ -3,7 +3,7 @@ name: 腾讯自选股养牛
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10,40 3,7,9,12,15 * * *'
+    - cron: '10,40 */3 * * *'
   
 jobs:
   build:
